# Technoscape

./: .clang-format  .gitignore  CMakeLists.txt  Milestone 1 AI Interactions.txt  app.rc  build_log.txt  main.cpp  player.cpp  player.hpp  resources.qrc
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Abo Hamar's AI Conversations/: claude2.md  claude3.md  claude4.md  claude5.md  claude6.md  convo1.md
assets/: suicideDrone_walk.rar  tiled.tiled-session
assets/neo_zero_V1.0/: test2.tsx
assets/sounds/: jlknj.tsx
include/: bossFight.hpp  bossHealthBar.hpp  brute.hpp  classes.hpp  door.hpp  enemies.hpp  furniture.hpp  gameLevel.hpp  gameLevels.hpp  gameOver.hpp  generic_robot.hpp  keyitem.hpp  leghitbox.hpp  levelFour.hpp  levelOne.hpp  levelThree.hpp  levelTwo.hpp  machine.hpp  menu_gameScene.hpp  pauseMenu.hpp  player.hpp  players.hpp  sideplayer.hpp  suicide_drone.hpp  test_side_player.hpp  trap.hpp  wall.hpp  weapon.hpp  xman.hpp
src/: bossFight.cpp  brute.cpp  classes.cpp  door.cpp  enemies.cpp  furniture.cpp  gameLevel.cpp  gameLevels.cpp  gameOver.cpp  generic_robot.cpp  keyitem.cpp  levelFour.cpp  levelOne.cpp  levelThree.cpp  levelTwo.cpp  machine.cpp  main.cpp  menu_gameScene.cpp  pauseMenu.cpp  player.cpp  players.cpp  sideplayer.cpp  suicide_drone.cpp  test_side_player.cpp  trap.cpp  wall.cpp  weapon.cpp  xman.cpp
